<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    android:gravity="center_horizontal">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cabecera"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_marginBottom="32dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_circular"
        android:textSize="18sp"
        android:textStyle="bold" />

    <ProgressBar
        android:id="@+id/pbCircular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:visibility="gone" />

    <Button
        android:id="@+id/btnSimularCarga"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/btn_simular_carga" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:layout_marginVertical="32dp" />

    <TextView
        android:id="@+id/tvProgreso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_lineal"
        android:textSize="18sp"
        android:textStyle="bold" />

    <ProgressBar
        android:id="@+id/pbLineal"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:max="100"
        android:progress="0" />

    <Button
        android:id="@+id/btnIniciarTarea"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/btn_iniciar_tarea" />

</LinearLayout>