<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cabecera"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_marginBottom="80dp" />

    <!-- Etiqueta que cambia según qué botón se pulse -->
    <TextView
        android:id="@+id/tvEstado2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/etiqueta_inicio"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textColor="@color/azul"
        android:layout_marginBottom="80dp" />

    <!-- Dos botones en horizontal -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/btnBoton1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="8dp"
            android:text="@string/texto_boton1" />

        <Button
            android:id="@+id/btnBoton2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="8dp"
            android:text="@string/texto_boton2" />

    </LinearLayout>

</LinearLayout>